# xdiff

./: Cargo.toml
examples/: serde.rs  similar.rs  yaml.rs
fixtures/: test.yml
src/: cli.rs  config.rs  lib.rs  main.rs  req.rs
